fix: drastically improve typing/querying of chats + messages
